# wgpu-canny-edge-detection

./: Cargo.toml  README.md  flake.nix
example-images/: README.md
src/: double_threshoulding.wgsl  edge_tracking.wgsl  gaussian_filter.wgsl  grayscale.wgsl  kernels.wgsl  lib.rs  magnitude.wgsl  main.rs  max_value.wgsl  non_maximum_suppression.wgsl  shader.wgsl
