[package]
name = "wgpu-canny-edge-detection"
version = "0.1.0"
edition = "2024"
authors = ["TornaxO7 <tornax@pm.me>"]
license = "GPL-2.0"
repository = "https://github.com/TornaxO7/wgpu-canny-edge-detection"

[dependencies]
wgpu = { version = "26.0", default-features = false, features = [
  # from the default features
  "parking_lot",
  "std",
  "vulkan",
  "wgsl",
] }
image = "0.25"
bytemuck = "1.23"
pollster = "0.4"

[dev-dependencies]
